Add TrinoBenchmarkToolV2